--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,32 +1,78 @@
-.App {
+html {
+  font-family: sans-serif;
+}
+
+html[dir=ltr] body .m-b-20 {
+  margin-bottom: 20px;
+}
+/* header styling */
+
+
+*, ::after, ::before {
+  box-sizing: border-box;
+}
+.auth-wrapper .auth-box {
+  background: #fff;
+  padding: 20px;
+  box-shadow: 1px 0 20px rgba(0,0,0,.08);
+  max-width: 600px;
+  width: 90%;
+  margin: 10% 0;
+}
+
+.auth-wrapper {
+  min-height: 100vh;
+  position: relative;
+}
+
+.align-items-center {
+  align-items: center!important;
+}
+
+.justify-content-center {
+  justify-content: center!important;
+}
+
+.d-flex {
+  display: flex!important;
+}
+
+body{
+  background-color: rgb(238, 234, 229);
+  line-height: 1.5;
+  color: #3e5569;
+  font-size: 1.5rem;
+}
+h5 {
+  margin-bottom: 2rem;
+  font-size: 16px;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.row {
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+img {
+  vertical-align: middle;
 }
 
-.App-link {
-  color: #61dafb;
+div.auth-box{
+  height: 350px;
+} 
+
+.Absolute-Center {
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.auth-wrapper .auth-box .logo {
+   text-align: center;
+}
+
+.db{
+  width: 30%;
+    height: auto;
 }
